  + Added addBookmark() function that takes an URL as argument.
  + Added two removeBookmark() functions, one taking a pointer to a Smb4KBookmark
    object and one taking an URL.
  + Added private addBookmarks() function that takes a list of Smb4KBookmark 
    objects and optionally a boolean that indicates if the internal list of
    shares should be replaced by the new one.
- Revised Smb4KProcess class:
  + Explicitly set the language to "C", because Samba might be localized
    (closes SF ticket #34).
- Revised Smb4KScanner class:
  + To use functions from the scanner in the plasmoid, Q_INVOKABLE and
    Q_PROPERTY macros are used.
  + Added workgroups(), hosts(), and shares() functions that return lists
    of type QDeclarativeListProperty<Smb4KNetworkObject>.
  + Added workgroupsListChanged() and sharesListChanged() signals.
  + Renamed hostListChanged() signal to hostsListChanged().
  + Added lookup() function that takes a QUrl as argument and initiates a
    network lookup according to the URL. The URL must already be known to
    Smb4K otherwise this function will not do anything.
  + Added find() function that takes a QUrl as argument and searches for
    a network item with the given URL. The URL must already be known to
    Smb4K otherwise this function will not do anything.
  + IP addresses are looked up every 60 s and when new hosts were discovered.
  + Improved periodic scanning.
  + Reimplemented usage of WINS server when looking up IP addresses.
  + Removed additional error code handling from
    Smb4KLookupSharesJob::processShares() since auth errors should be
    reported with a NTSTATUS* error message via stderr (closes SF ticket
    #25).
- Revised Smb4KMounter class:
  + To use functions from the mounter in the plasmoid, Q_INVOKABLE and
    Q_PROPERTY macros are used.
  + Added mountedShares() functions that returns a list of type
    QDeclarativeListProperty<Smb4KNetworkObject>.
  + Added mountedSharesListChanged() signal.